bad/add_invalid_types_class_int.example_compiler_output
ERROR
[1mbad/add_invalid_types_class_int.lat:6:4: [1;31merror: [0;1maddition is defined only for int values or string values, not `X` and `int`[m
	x + 42;
	  [1;32m^[m
